nldl_derive/tests/ui/serializable/nla-type-unknown-multiple-fails.stderr
error: proc-macro derive panicked
 --> tests/ui/serializable/nla-type-unknown-multiple-fails.rs:3:28
  |
3 | #[derive(Debug, PartialEq, nldl::attr::Serialize)]
  |                            ^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Only 1 variant may be marked with #[nla_type(_)]. Saw 2
